syntax = "proto3";

package main;

service LoadrService {
     rpc Connect(stream ControlResponse) returns (stream ControlRequest);
     rpc SendTestResult(SendTestResultRequest) returns (SendTestResultResponse);
}

message ControlRequest{
     TestSpecification spec = 1;
}

message ControlResponse{

}

message TestSpecification{

}

message SendTestResultRequest{
     TestResult result = 1;
}

message SendTestResultResponse{

}

message TestResult{

}